<resources>
    <string name="app_name">Menu Project</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="sms_string">SMS</string>
    <string name="phone_string">PHONE</string>
    <string name="web_string">WEB</string>
    <string name="map_string">MAP</string>
    <string name="share_string">SHARE</string>
    <string name="new_activity_string">NEW ACTIVITY</string>
</resources>
